# teams-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
src/bot/: app.py  llm.py  llm_hf.py  scheduler.py  storage.py
