[tool.poetry]
name = "teams-bot"
version = "0.1.0"
description = "Python Teams bot (Echo, HF LLM, Reminders)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
aiohttp = "^3.9"
botbuilder-core = "^4.15"
botbuilder-schema = "^4.15"
botbuilder-integration-aiohttp = "^4.15"
apscheduler = "^3.10"
huggingface_hub = ">=0.25.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
